responsive fixes and scrollbar css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,31 @@
+:root{
+  --sc-width : 10px;
+  --sc-track-color : #444654;
+  --sc-track-hover-color : #797a85;
+}
 .App {
   display: flex;
-  min-width: 100vw;
+  width: calc(100vw - var(--sc-width) -2px);
   min-height: 100vh;
   flex-direction: column;
+}body::-webkit-scrollbar {
+  width: var(--sc-width);
+}
+
+/* Track */
+body::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+ 
+/* Handle */
+body::-webkit-scrollbar-thumb {
+  background-color: var(--sc-track-color);
+  border-radius: 20px;
+  transition: transform 0.3s ease-in-out;
+}
+
+/* Handle on hover */
+body::-webkit-scrollbar-thumb:hover {
+  background: var(--sc-track-hover-color); 
+  transform: scale(1.2);
 }
