--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -68,3 +68,8 @@
 p{
     margin: 0;
 }
+@media (max-width : 992px){
+    .panel-body{
+        min-width: 30vw;
+    }
+}
